更新文案，优化版本信息页样式

--- a/pages/about/index.wxss
+++ b/pages/about/index.wxss
@@ -1,5 +1,6 @@
 page {
   background-color: #fff;
+  padding-bottom:120rpx;
 }
 
 .updateList {
@@ -35,7 +36,8 @@ page {
   color: #888;
   font-size: 20rpx;
   text-align: center;
-  margin-bottom: 30rpx;
+  padding-bottom: 30rpx;
+  background-color: #fff;
 }
 
 .author image {
