--- a/pages/info/index.wxml
+++ b/pages/info/index.wxml
@@ -16,12 +16,12 @@
       </view>
     </view>
   </view>
-  <!-- <view class="infolist">
-    <view wx:for="{{adList}}" wx:for-item="ad" wx:key="unique" class="m-info" wx:for-index="index" data-index="{{index}}" bindtap="goto">
-      <text>{{ad.infotitle}}</text>
+   <view class="infolist">
+    <view wx:for="{{nav2List}}" wx:for-item="nav2" wx:key="unique" class="m-info" wx:for-index="index" data-link="{{nav2.link}}" bindtap="goto">
+      <text>{{nav2.title}}</text>
       <view class="m-chevron">
         <image class="chevron" src="/img/chevron.png"></image>
       </view>
     </view>
-  </view> -->
+  </view> 
 </view>
