--- a/pages/movement/filterout/index.wxss
+++ b/pages/movement/filterout/index.wxss
@@ -97,7 +97,7 @@
 }
 
 .sprite .name {
-  margin-left: 20rpx;
+  /* margin-left: 20rpx; */
 }
 
 .sprite .types {
@@ -105,7 +105,7 @@
 }
 
 .sprite .types .m-type {
-  margin-left: 20rpx;
+  margin-left: 30rpx;
 }
 
 .sprite .movetypes {
@@ -113,7 +113,7 @@
 }
 
 .sprite .movetypes .m-movetype {
-  margin-left: 20rpx;
+  margin-left: 50rpx;
 }
 
 .sprite .power {
