--- a/pages/movement/detail/index.wxml
+++ b/pages/movement/detail/index.wxml
@@ -15,26 +15,26 @@
     </view>
     <view class="m-numbers">
       <view class="m-number">
-        <text>威力</text>
+        <text class="title">威力</text>
         <text class="value">{{move.power}}</text>
       </view>
       <view class="m-number">
-        <text>命中率</text>
+        <text class="title">命中率</text>
         <text class="value">{{move.accuracy}}</text>
         <view class="line"></view>
       </view>
-      <view class="m-number">
-        <text>PP</text>
+      <view class="m-number m-pp">
+        <text class="title">PP</text>
         <text class="value">{{move.pp}}</text>
         <view class="line"></view>
       </view>
-      <view class="m-number">
-        <text>先置</text>
+      <view class="m-number m-prior">
+        <text class="title">先制</text>
         <text class="value">{{move.prior}}</text>
         <view class="line"></view>
       </view>
-      <view class="m-number">
-        <text>Z威力</text>
+      <view class="m-number m-z">
+        <text class="title">Z威力</text>
         <text class="value">{{move.z}}</text>
         <view class="line"></view>
       </view>
@@ -44,7 +44,8 @@
   <view class="ctn effect">
     {{move.effect}}
   </view>
-  <view wx:if="{{move.levels.length}}" class="ctntitle">可通过<text class="red">升级</text>学会该招式的宝可梦</view>
+  <view wx:if="{{move.levels.length}}" class="ctntitle">可通过
+    <text class="red">升级</text>学会该招式的宝可梦</view>
   <view wx:if="{{move.levels.length}}" class="ctn">
     <view wx:for="{{move.levels}}" class="sprite" wx:for-item="sprite" wx:key="unique" data-id="{{sprite.id}}" data-index="{{sprite.index}}" bindtap="tapSprite">
       <image class="m-avatar" src="/img/sprites/{{sprite.id}}.png"></image>
