--- a/pages/movement/detail/index.wxss
+++ b/pages/movement/detail/index.wxss
@@ -45,6 +45,21 @@
   position: relative;
 }
 
+.m-move .m-numbers .m-pp {
+  flex: 0.8;
+  padding-left: 24rpx;
+}
+
+.m-move .m-numbers .m-prior {
+  flex: 0.8;
+  padding-left: 24rpx;
+}
+
+.m-move .m-numbers .m-z {
+  flex: 1.4;
+  padding-left: 42rpx;
+}
+
 .m-move .m-numbers .m-number .line {
   display: block;
   position: absolute;
@@ -59,7 +74,10 @@
 .m-move .m-numbers .m-number text {
   display: block;
   width: 100%;
-  height: 50%;
+  height: 60rpx;
+}
+
+.m-move .m-numbers .m-number .title {
   font-size: 26rpx;
   line-height: 80rpx;
 }
@@ -131,7 +149,8 @@
 }
 
 .effect {
-  padding: 30rpx 3rpx 24rpx 30rpx;
+  box-sizing: border-box;
+  padding: 30rpx 30rpx 24rpx 30rpx;
   border-bottom: 1rpx solid #e5e5e5;
 }
 
