Ver 2.1 2018.06.01 更正了颠倒、输电、怪异电波的属性信息错误； 新增第七世代宝可梦的招式数据；

--- a/app.wxss
+++ b/app.wxss
@@ -56,6 +56,7 @@ page {
 .m-contents .m-content:last-child {
   border-bottom: 0;
 }
+
 .m-contents .active {
   display: block;
 }
@@ -72,6 +73,14 @@ page {
   color: #888;
   padding: 0 30rpx;
   background-color: #fff;
+}
+
+.m-bottomsprite {
+  color: #353535;
+}
+
+.m-bottomsprite .name {
+  margin-left: 20rpx;
 }
 
 .m-sprite .types {
@@ -104,7 +113,7 @@ page {
 /* 精灵头像 */
 
 .m-avatar {
-   display: inline-block;
+  display: inline-block;
   vertical-align: middle;
   height: 40px;
   width: 40px;
