--- a/pages/info/index/index.wxml
+++ b/pages/info/index/index.wxml
@@ -3,6 +3,7 @@
   <view class="infolist">
     <view wx:for="{{navList}}" wx:for-item="nav" wx:key="unique" class="m-info" data-link="{{nav.link}}" bindtap="goto">
       <text>{{nav.title}}</text>
+      <text wx:if="{{nav.tag}}" class="tag">{{nav.tag}}</text>
       <view class="m-chevron">
         <image class="chevron" src="/img/chevron.png"></image>
       </view>
@@ -11,6 +12,7 @@
   <view class="infolist">
     <view wx:for="{{infoList}}" wx:for-item="info" wx:key="unique" class="m-info" data-link="{{info.link}}" bindtap="goto">
       <text>{{info.title}}</text>
+      <text wx:if="{{info.tag}}" class="tag">{{info.tag}}</text>
       <view class="m-chevron">
         <image class="chevron" src="/img/chevron.png"></image>
       </view>
@@ -19,6 +21,7 @@
    <view class="infolist">
     <view wx:for="{{nav2List}}" wx:for-item="nav2" wx:key="unique" class="m-info" wx:for-index="index" data-link="{{nav2.link}}" bindtap="goto">
       <text>{{nav2.title}}</text>
+      <text wx:if="{{nav2.tag}}" class="tag">{{nav2.tag}}</text>
       <view class="m-chevron">
         <image class="chevron" src="/img/chevron.png"></image>
       </view>
