--- a/pages/filter/index.wxss
+++ b/pages/filter/index.wxss
@@ -1,5 +1,9 @@
 /* index.wxss */
 
+.m-contents {
+  margin-top: 100rpx;
+}
+
 .m-contents .m-content .item {
   display: flex;
   margin: 0 30rpx;
@@ -19,12 +23,12 @@
 
 .m-contents .m-content .item .left {
   text-align: left;
-  line-height:88rpx;
+  line-height: 88rpx;
 }
 
 .m-contents .m-content .item .right {
   text-align: right;
-  line-height:88rpx;
+  line-height: 88rpx;
 }
 
 .m-contents .m-content .item .left .m-eggGroup {
