--- a/pages/info/character/index.wxml
+++ b/pages/info/character/index.wxml
@@ -5,7 +5,10 @@
       <text class="m-thead">{{table.title}}</text>
       <view class="m-tbody">
         <view wx:for="{{table.data}}" wx:for-item="item" wx:key="unique" class="m-info">
-          <text class="m-ititle">{{item.title}}</text>
+          <view class="m-ititle">
+            <text>{{item.title}}</text>
+            <text class="fname">{{item.fname}}</text>
+          </view>
           <text class="m-iplus" wx:if="{{item.plus}}">+{{item.plus}}</text>
           <text class="m-iminus" wx:if="{{item.minus}}">-{{item.minus}}</text>
         </view>
