--- a/pages/info/character/index.wxss
+++ b/pages/info/character/index.wxss
@@ -23,8 +23,8 @@
 .m-info {
   box-sizing: border-box;
   display: flex;
-  height: 88rpx;
-  line-height: 88rpx;
+  height: 120rpx;
+  line-height: 120rpx;
   font-size: 34rpx;
   color: #000;
   margin-left: 30rpx;
@@ -48,7 +48,20 @@
 }
 
 .m-ititle {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+}
+
+.m-ititle text{
   flex: 1;
+  line-height: 86rpx;
+}
+
+.m-ititle .fname{
+  font-size: 26rpx;
+  color: #888;
+  line-height: 0rpx;
 }
 
 .m-iplus {
