--- a/pages/movement/detail/index.wxml
+++ b/pages/movement/detail/index.wxml
@@ -1,5 +1,6 @@
 <!--index.wxml-->
 <view class="container">
+  <button class="m-sharebtn" open-type="share"></button>
   <view class="m-move" data-id="{{move.id}}">
     <!-- <image class="m-avatar" src="/img/sprites/{{sprite.id}}.png"></image> -->
     <view class="m-info">
