--- a/pages/abilitydetail/index.wxml
+++ b/pages/abilitydetail/index.wxml
@@ -8,7 +8,7 @@
   <view class="spriteList">
     <view wx:for="{{spriteList}}" class="sprite" wx:for-item="sprite" wx:key="unique" data-id="{{sprite.id}}" data-index="{{sprite.index}}" bindtap="tapSprite">
       <image class="m-avatar" src="/img/sprites/{{sprite.id }}.png"></image>
-      <text class="name">{{sprite.cname}}</text>
+      <text class="name">{{sprite.cname + (sprite.form || '')}}</text>
       <view class="types">
         <text class="m-type {{type}}" wx:for="{{sprite.type}}" wx:key="unique" wx:for-item="type" wx:for-index="index">{{sprite.ctype[index]}}</text>
       </view>
