--- a/pages/info/about/index.wxss
+++ b/pages/info/about/index.wxss
@@ -1,32 +1,34 @@
 page {
   background-color: #fff;
   padding-bottom: 120rpx;
+  margin-left: 8rpx;
 }
 
 .updateList {
-  margin: 30rpx;
-  padding-bottom: 30rpx;
+  margin: 32rpx;
+  padding-bottom: 32rpx;
   border-bottom: 1rpx solid #e5e5e5;
 }
 
 .version {
   color: #353535;
-  font-size: 34rpx;
+  font-size: 28rpx;
+  font-weight: bold;
   line-height: 48rpx;
 }
 
 .date {
-  font-size: 26rpx;
+  font-size: 24rpx;
   color: #888;
-  line-height: 37rpx;
-  margin-bottom: 10rpx;
+  line-height: 36rpx;
+  margin-bottom: 12rpx;
 }
 
 .itemList {
   text-align: left;
-  font-size: 26rpx;
+  font-size: 24rpx;
   color: #353535;
-  line-height: 37rpx;
+  line-height: 36rpx;
 }
 
 .author {
@@ -36,8 +38,8 @@ page {
   color: #888;
   font-size: 20rpx;
   text-align: center;
-  padding-top: 30rpx;
-  padding-bottom: 30rpx;
+  padding-top: 32rpx;
+  padding-bottom: 32rpx;
   background-color: #fff;
 }
 
