--- a/pages/info/feedback/index.wxss
+++ b/pages/info/feedback/index.wxss
@@ -5,21 +5,22 @@ page {
 
 view {
   text-align: left;
-  font-size: 26rpx;
+  font-size: 28rpx;
   color: #353535;
-  line-height: 37rpx;
-  padding-left: 30rpx;
-  padding-right: 30rpx;
+  line-height: 44rpx;
+  padding-left: 24rpx;
+  padding-right: 24rpx;
 }
 
 .title {
   padding-top: 40rpx;
   line-height: 48rpx;
-  font-size: 34rpx;
+  font-size: 28rpx;
+  font-weight: bold;
 }
 
 .content {
-  padding-top: 20rpx;
+  padding-top: 8rpx;
 }
 
 .red {
@@ -28,11 +29,11 @@ view {
 
 button {
   width: 480rpx;
-  height: 94rpx;
+  height: 96rpx;
   background-color: #dc4343;
   color: #fff;
-  line-height: 94rpx;
-  border-radius: 10rpx;
+  line-height: 96rpx;
+  border-radius: 8rpx;
   font-size: 36rpx;
-  margin-top: 100rpx;
+  margin-top: 96rpx;
 }
