--- a/pages/sprite/index.wxml
+++ b/pages/sprite/index.wxml
@@ -73,67 +73,67 @@
       <text class="title">HP</text>
       <view class="content">
         <text class="pTitle">{{sprite.baseStats.HP}}</text>
-        <progress wx:if="{{sprite.baseStats.HP < 50}}" percent="{{100 * sprite.baseStats.HP / 255}}" stroke-width="15" active activeColor="#FF400B" />
-        <progress wx:elif="{{sprite.baseStats.HP < 100}}" percent="{{100 * sprite.baseStats.HP / 255}}" stroke-width="15" active activeColor="#FFCE0F" />
-        <progress wx:elif="{{sprite.baseStats.HP < 150}}" percent="{{100 * sprite.baseStats.HP / 255}}" stroke-width="15" active activeColor="#6FCF4D" />
-        <progress wx:else percent="{{100 * sprite.baseStats.HP / 255}}" stroke-width="15" active activeColor="#6595FF" />
+        <progress wx:if="{{sprite.baseStats.HP < 50}}" percent="{{100 * sprite.baseStats.HP / 255}}" stroke-width="15" active activeColor="#FF400B" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.HP < 100}}" percent="{{100 * sprite.baseStats.HP / 255}}" stroke-width="15" active activeColor="#FFCE0F" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.HP < 150}}" percent="{{100 * sprite.baseStats.HP / 255}}" stroke-width="15" active activeColor="#6FCF4D" duration="10" />
+        <progress wx:else percent="{{100 * sprite.baseStats.HP / 255}}" stroke-width="15" active activeColor="#6595FF" duration="10" />
       </view>
     </view>
     <view class="item">
       <text class="title">攻击</text>
       <view class="content">
         <text class="pTitle">{{sprite.baseStats.ATK}}</text>
-        <progress wx:if="{{sprite.baseStats.ATK < 50}}" percent="{{100 * sprite.baseStats.ATK / 255}}" stroke-width="15" active activeColor="#FF400B" />
-        <progress wx:elif="{{sprite.baseStats.ATK < 100}}" percent="{{100 * sprite.baseStats.ATK / 255}}" stroke-width="15" active activeColor="#FFCE0F" />
-        <progress wx:elif="{{sprite.baseStats.ATK < 150}}" percent="{{100 * sprite.baseStats.ATK / 255}}" stroke-width="15" active activeColor="#6FCF4D" />
-        <progress wx:else percent="{{100 * sprite.baseStats.ATK / 255}}" stroke-width="15" active activeColor="#6595FF" />
+        <progress wx:if="{{sprite.baseStats.ATK < 50}}" percent="{{100 * sprite.baseStats.ATK / 255}}" stroke-width="15" active activeColor="#FF400B" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.ATK < 100}}" percent="{{100 * sprite.baseStats.ATK / 255}}" stroke-width="15" active activeColor="#FFCE0F" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.ATK < 150}}" percent="{{100 * sprite.baseStats.ATK / 255}}" stroke-width="15" active activeColor="#6FCF4D" duration="10" />
+        <progress wx:else percent="{{100 * sprite.baseStats.ATK / 255}}" stroke-width="15" active activeColor="#6595FF" duration="10" />
       </view>
     </view>
     <view class="item">
       <text class="title">防御</text>
       <view class="content">
         <text class="pTitle">{{sprite.baseStats.DEF}}</text>
-        <progress wx:if="{{sprite.baseStats.DEF < 50}}" percent="{{100 * sprite.baseStats.DEF / 255}}" stroke-width="15" active activeColor="#FF400B" />
-        <progress wx:elif="{{sprite.baseStats.DEF < 100}}" percent="{{100 * sprite.baseStats.DEF / 255}}" stroke-width="15" active activeColor="#FFCE0F" />
-        <progress wx:elif="{{sprite.baseStats.DEF < 150}}" percent="{{100 * sprite.baseStats.DEF / 255}}" stroke-width="15" active activeColor="#6FCF4D" />
-        <progress wx:else percent="{{100 * sprite.baseStats.DEF / 255}}" stroke-width="15" active activeColor="#6595FF" />
+        <progress wx:if="{{sprite.baseStats.DEF < 50}}" percent="{{100 * sprite.baseStats.DEF / 255}}" stroke-width="15" active activeColor="#FF400B" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.DEF < 100}}" percent="{{100 * sprite.baseStats.DEF / 255}}" stroke-width="15" active activeColor="#FFCE0F" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.DEF < 150}}" percent="{{100 * sprite.baseStats.DEF / 255}}" stroke-width="15" active activeColor="#6FCF4D" duration="10" />
+        <progress wx:else percent="{{100 * sprite.baseStats.DEF / 255}}" stroke-width="15" active activeColor="#6595FF" duration="10" />
       </view>
     </view>
     <view class="item">
       <text class="title">特攻</text>
       <view class="content">
         <text class="pTitle">{{sprite.baseStats.SPA}}</text>
-        <progress wx:if="{{sprite.baseStats.SPA < 50}}" percent="{{100 * sprite.baseStats.SPA / 255}}" stroke-width="15" active activeColor="#FF400B" />
-        <progress wx:elif="{{sprite.baseStats.SPA < 100}}" percent="{{100 * sprite.baseStats.SPA / 255}}" stroke-width="15" active activeColor="#FFCE0F" />
-        <progress wx:elif="{{sprite.baseStats.SPA < 150}}" percent="{{100 * sprite.baseStats.SPA / 255}}" stroke-width="15" active activeColor="#6FCF4D" />
-        <progress wx:else percent="{{100 * sprite.baseStats.SPA / 255}}" stroke-width="15" active activeColor="#6595FF" />
+        <progress wx:if="{{sprite.baseStats.SPA < 50}}" percent="{{100 * sprite.baseStats.SPA / 255}}" stroke-width="15" active activeColor="#FF400B" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.SPA < 100}}" percent="{{100 * sprite.baseStats.SPA / 255}}" stroke-width="15" active activeColor="#FFCE0F" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.SPA < 150}}" percent="{{100 * sprite.baseStats.SPA / 255}}" stroke-width="15" active activeColor="#6FCF4D" duration="10" />
+        <progress wx:else percent="{{100 * sprite.baseStats.SPA / 255}}" stroke-width="15" active activeColor="#6595FF" duration="10" />
       </view>
     </view>
     <view class="item">
       <text class="title">特防</text>
       <view class="content">
         <text class="pTitle">{{sprite.baseStats.SPD}}</text>
-        <progress wx:if="{{sprite.baseStats.SPD < 50}}" percent="{{100 * sprite.baseStats.SPD / 255}}" stroke-width="15" active activeColor="#FF400B" />
-        <progress wx:elif="{{sprite.baseStats.SPD < 100}}" percent="{{100 * sprite.baseStats.SPD / 255}}" stroke-width="15" active activeColor="#FFCE0F" />
-        <progress wx:elif="{{sprite.baseStats.SPD < 150}}" percent="{{100 * sprite.baseStats.SPD / 255}}" stroke-width="15" active activeColor="#6FCF4D" />
-        <progress wx:else percent="{{100 * sprite.baseStats.SPD / 255}}" stroke-width="15" active activeColor="#6595FF" />
+        <progress wx:if="{{sprite.baseStats.SPD < 50}}" percent="{{100 * sprite.baseStats.SPD / 255}}" stroke-width="15" active activeColor="#FF400B" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.SPD < 100}}" percent="{{100 * sprite.baseStats.SPD / 255}}" stroke-width="15" active activeColor="#FFCE0F" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.SPD < 150}}" percent="{{100 * sprite.baseStats.SPD / 255}}" stroke-width="15" active activeColor="#6FCF4D" duration="10" />
+        <progress wx:else percent="{{100 * sprite.baseStats.SPD / 255}}" stroke-width="15" active activeColor="#6595FF" duration="10" />
       </view>
     </view>
     <view class="item">
       <text class="title">速度</text>
       <view class="content">
         <text class="pTitle">{{sprite.baseStats.SPE}}</text>
-        <progress wx:if="{{sprite.baseStats.SPE < 50}}" percent="{{100 * sprite.baseStats.SPE / 255}}" stroke-width="15" active activeColor="#FF400B" />
-        <progress wx:elif="{{sprite.baseStats.SPE < 100}}" percent="{{100 * sprite.baseStats.SPE / 255}}" stroke-width="15" active activeColor="#FFCE0F" />
-        <progress wx:elif="{{sprite.baseStats.SPE < 150}}" percent="{{100 * sprite.baseStats.SPE / 255}}" stroke-width="15" active activeColor="#6FCF4D" />
-        <progress wx:else percent="{{100 * sprite.baseStats.SPE / 255}}" stroke-width="15" active activeColor="#6595FF" />
+        <progress wx:if="{{sprite.baseStats.SPE < 50}}" percent="{{100 * sprite.baseStats.SPE / 255}}" stroke-width="15" active activeColor="#FF400B" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.SPE < 100}}" percent="{{100 * sprite.baseStats.SPE / 255}}" stroke-width="15" active activeColor="#FFCE0F" duration="10" />
+        <progress wx:elif="{{sprite.baseStats.SPE < 150}}" percent="{{100 * sprite.baseStats.SPE / 255}}" stroke-width="15" active activeColor="#6FCF4D" duration="10" />
+        <progress wx:else percent="{{100 * sprite.baseStats.SPE / 255}}" stroke-width="15" active activeColor="#6595FF" duration="10" />
       </view>
     </view>
     <view class="item">
       <text class="title">总和</text>
       <view class="content">
         <text class="pTitle">{{sprite.baseStats.HP + sprite.baseStats.ATK + sprite.baseStats.DEF + sprite.baseStats.SPA + sprite.baseStats.SPD + sprite.baseStats.SPE}}</text>
-        <progress percent="1" stroke-width="15" active activeColor="#6595FF" style="visibility:hidden" />
+        <progress percent="1" stroke-width="15" active activeColor="#6595FF" style="visibility:hidden" duration="10" />
       </view>
     </view>
   </view>
@@ -172,7 +172,7 @@
           <text wx:elif="{{evolute.exchange}}" class="level">{{evolute.exchange}}</text>
           <text wx:elif="{{evolute.other}}" class="level">{{evolute.other}}</text>
           <text wx:else class="nolevel">''</text>
-          <view class="evoIteminner" bindtap="tapSprite" data-id="{{evolute.id}}" data-index="{{evolute.index}}">
+          <view class="evoIteminner" bindtap="tapSprite" data-id="{{evolute.id}}">
             <view class="avatarctn">
               <image class="m-avatar" src="/img/sprites/{{evolute.id }}.png"></image>
             </view>
