--- a/pages/filterout/index.wxss
+++ b/pages/filterout/index.wxss
@@ -67,14 +67,25 @@ page {
   height: 88rpx;
 }
 .sprite {
+  position: relative;
   display: block;
-  margin: 0 32rpx;
-  height: 88rpx;
-  line-height: 88rpx;
+  padding: 0 32rpx;
+  height: 96rpx;
+  line-height: 96rpx;
   font-size: 32rpx;
   color: #353535;
-  border-bottom: 1rpx solid #e5e5e5;
+  /* border-bottom: 1rpx solid #e5e5e5; */
   box-sizing: border-box;
+}
+
+.sprite::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 1rpx;
+  left: 132rpx;
+  right: 32rpx;
+  border-bottom: 1rpx solid #e5e5e5;
 }
 
 .sprite .name {
