--- a/pages/sprite/index.wxss
+++ b/pages/sprite/index.wxss
@@ -4,27 +4,6 @@
   padding-bottom: 40rpx;
 }
 
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
-}
-
 .m-sprite {
   margin-top: 40rpx;
 }
@@ -277,4 +256,8 @@
 .evolutions .empty {
   visibility: hidden;
   opacity: 0;
+}
+
+ad {
+  margin-top: 88rpx;
 }
